--- a/client/.env
+++ b/client/.env
@@ -1,9 +1,9 @@
 NEXT_PUBLIC_SERVER_URI = "http://localhost:8000/api/v1/"
 
-GOOGLE_CLIENT_ID = 1032942251989-6rrj87e55u8perkuo8u7kmf730u664d8.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET = 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
+GOOGLE_CLIENT_ID = 111111111111-xxxxxxxxxxxxxxxxxxx.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET = ldknalsdnlansdnals1321btI6B0hN
 
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 
-SECRET=becodemy
+SECRET=codem
